# AIthentic

./: .cursorrules.md  .env.example  .gitignore  PLANNING.md  README.md  TASK.md  ice_breaker.py  pyproject.toml  requirements.txt
aithentic/: config.py
aithentic/agents/: browser_agent.py
aithentic/rag/: models.py  rag_pipeline.py
aithentic/rag/document_loaders/: base_loader.py  text_loader.py
aithentic/rag/embeddings/: base_embedder.py  openai_embedder.py
aithentic/rag/generators/: base_generator.py  openai_generator.py
aithentic/rag/retrievers/: base_retriever.py  similarity_retriever.py
aithentic/rag/text_splitters/: base_splitter.py  character_splitter.py
aithentic/rag/vector_stores/: base_store.py  in_memory_store.py
aithentic/tools/: summarizer.py
aithentic/utils/: file_utils.py  logging.py
app/: youtube_summary.py
apps/rag_app/: app.py  streamlit_app.py
apps/web_explorer/: __init__.py  app.py
apps/youtube_summary/: __init__.py  app.py  utils.py
backend/: .env.example  .pre-commit-config.yaml  main.py  requirements.txt  test_env.py
backend/app/agents/: base.py
backend/app/agents/workflows/: research_agent.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agent.py  health.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/schemas/: agent.py
reports/: lllm_summary.md
tests/: test_browser_agent.py
