[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aithentic"
version = "0.1.0"
description = "AI功能探索和應用開發平台"
readme = "README.md"
authors = ["AIthentic Team <example@example.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "aithentic"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "*"
langchain-openai = "*"
langchain-ollama = "*"
openai = "*"
python-dotenv = "*"
playwright = "*"
beautifulsoup4 = "*"
requests = "*"
yt-dlp = "*"
faster-whisper = "*"
ffmpeg-python = "*"
streamlit = "*"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 